# llm-cpu-inference

./: .gitignore  constants.py  program.md  protocol.py  pyproject.toml  run.sh  run_backend.py  score.py  setup.py  specs.md
backends/: backend.py
