[project]
name = "cpu-llm-bench"
version = "0.1.0"
description = "Benchmark harness measuring the latency vs quality pareto frontier of small LLMs on CPU"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
